--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -80,6 +80,7 @@
         <mat-divider></mat-divider>
 
         <app-category-picker
+          [transactionType]="actionType"
           (selection)="onCategorySelection($event)"
         ></app-category-picker>
 
