--- a/PMApp/src/app/app.component.html
+++ b/PMApp/src/app/app.component.html
@@ -1,6 +1,10 @@
-<div class="container">
-  <div class="box">
+<div class="grid">
+  <div class="col-12">
     <app-toolbar></app-toolbar>
+  </div>
+  <div class="col-12 md:col-6 md:col-offset-3">
     <router-outlet></router-outlet>
   </div>
 </div>
+
+<app-dialog></app-dialog>
