--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -1,99 +1,112 @@
-<mat-card>
-  <mat-card-title>Nuevo {{ action }}</mat-card-title>
-  <mat-card-content>
-    <form [formGroup]="form" id="ngForm">
-      <div class="container">
-        <app-currency-field
-          (currencyValueSelector)="onSelectCurrency($event)"
-        ></app-currency-field>
+<p-card header="Nuevo {{ action }}">
+  <form [formGroup]="form" id="ngForm">
+    <app-currency-field
+      (currencyValueSelector)="onSelectCurrency($event)"
+    ></app-currency-field>
+    <p-divider></p-divider>
 
-        <mat-divider></mat-divider>
-        <mat-slide-toggle formControlName="completed"
-          >Realizado</mat-slide-toggle
-        >
+    <span>
+      <h5>Realizado</h5>
+      <p-inputSwitch
+        inputId="completedSwitch"
+        formControlName="completed"
+      ></p-inputSwitch>
+    </span>
+    <p-divider></p-divider>
 
-        <mat-divider></mat-divider>
+    <span class="p-float-label">
+      <p-calendar
+        formControlName="date_of_transaction"
+        [showIcon]="true"
+        inputId="calendar"
+      ></p-calendar>
+      <label for="calendar">Fecha de transacción</label>
+    </span>
+    <p-divider></p-divider>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Fecha de transacción</mat-label>
-          <input
-            matInput
-            [matDatepicker]="picker"
-            formControlName="date_of_transaction"
-          />
-          <mat-datepicker-toggle
-            matSuffix
-            [for]="picker"
-          ></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
+    <span class="p-float-label">
+      <input
+        id="description-input"
+        formControlName="description"
+        type="text"
+        pInputText
+      />
+      <label for="description-input">Descripción</label>
+    </span>
+    <p-divider></p-divider>
 
-        <mat-divider></mat-divider>
+    <span>
+      <h5>{{ action }} Fijo</h5>
+      <p-inputSwitch
+        inputId="recurrentSwitch"
+        formControlName="recurrent"
+        (click)="onRecurrentToggle()"
+      ></p-inputSwitch>
+    </span>
+    <p-divider></p-divider>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Descripción</mat-label>
-          <input matInput formControlName="description" />
-        </mat-form-field>
+    <span>
+      <h5>Repetir</h5>
+      <p-inputSwitch
+        inputId="repeatsSwitch"
+        formControlName="repeats"
+        (click)="onRepeatsToggle()"
+      ></p-inputSwitch>
+    </span>
+    <div
+      class="col-12 flex flex-wrap flex-row justify-content-around"
+      *ngIf="showRepetitions.value"
+    >
+      <span class="p-float-label">
+        <p-inputNumber formControlName="repetitions"></p-inputNumber>
+        <label for="calendar">Repeticiones</label>
+      </span>
 
-        <mat-divider></mat-divider>
+      <app-frequency-picker
+        (selection)="onFrequencyChange($event)"
+      ></app-frequency-picker>
+    </div>
+    <p-divider></p-divider>
 
-        <mat-slide-toggle
-          formControlName="recurrent"
-          (click)="onRecurrentToggle()"
-          >{{ action }} fijo</mat-slide-toggle
-        >
+    <span class="p-float-label">
+      <input id="notes-input" formControlName="notes" type="text" pInputText />
+      <label for="notes-input">Notas</label>
+    </span>
+    <p-divider></p-divider>
 
-        <mat-divider></mat-divider>
+    <app-category-picker
+      [transactionType]="actionType"
+      (selection)="onCategorySelection($event)"
+    ></app-category-picker>
+    <p-divider></p-divider>
 
-        <mat-slide-toggle formControlName="repeats" (click)="onRepeatsToggle()"
-          >Repetir</mat-slide-toggle
-        >
-
-        <div *ngIf="showRepetitions.value">
-          <mat-form-field appearance="fill" floatLabel="always">
-            <mat-label>Cantidad</mat-label>
-            <input
-              matInput
-              type="number"
-              class="example-right-align"
-              placeholder="0"
-              formControlName="repetitions"
-            />
-          </mat-form-field>
-          <mat-form-field id="currency-selector" appearance="fill">
-            <mat-label>Periodo</mat-label>
-            <mat-select formControlName="frequency">
-              <mat-option value="days">Días</mat-option>
-              <mat-option value="weeks">Semanas</mat-option>
-              <mat-option value="months" selected>Meses</mat-option>
-              <mat-option value="years">Años</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-divider></mat-divider>
-        </div>
-
-        <mat-form-field appearance="fill">
-          <mat-label>Notas</mat-label>
-          <input matInput formControlName="notes" />
-        </mat-form-field>
-
-        <mat-divider></mat-divider>
-
-        <app-category-picker
-          [transactionType]="actionType"
-          (selection)="onCategorySelection($event)"
-        ></app-category-picker>
-
-        <mat-divider></mat-divider>
-
-        <mat-slide-toggle formControlName="ignore">Ignorar</mat-slide-toggle>
-
-        <mat-divider></mat-divider>
-      </div>
-    </form>
-  </mat-card-content>
-  <mat-card-actions align="end">
-    <button mat-button (click)="onClearForm()">Limpiar</button>
-    <button mat-button (click)="onSubmitForm()">Guardar</button>
-  </mat-card-actions>
-</mat-card>
+    <span>
+      <h5>Ignorar</h5>
+      <p-inputSwitch
+        inputId="ignoreSwitch"
+        formControlName="ignore"
+      ></p-inputSwitch>
+    </span>
+    <p-divider></p-divider>
+  </form>
+  <ng-template pTemplate="footer">
+    <span class="p-buttonset">
+      <button
+        pButton
+        pRipple
+        label="Save"
+        icon="pi pi-check"
+        (click)="onSubmitForm()"
+      ></button>
+      <button
+        pButton
+        pRipple
+        label="Delete"
+        icon="pi pi-trash"
+        (click)="onClearForm()"
+        disabled
+      ></button>
+      <button pButton pRipple label="Cancel" icon="pi pi-times"></button>
+    </span>
+  </ng-template>
+</p-card>
