--- a/PMApp/src/app/shared/category-picker/category-picker.component.html
+++ b/PMApp/src/app/shared/category-picker/category-picker.component.html
@@ -1,12 +1,11 @@
-<mat-form-field appearance="fill">
-  <mat-label>Categoría</mat-label>
-  <mat-select [formControl]="categorySelect">
-    <mat-option
-      *ngFor="let item of categories"
-      [value]="item.id"
-      (click)="onSelect(item.id)"
-    >
-      {{ item.name }}
-    </mat-option>
-  </mat-select>
-</mat-form-field>
+<span class="p-float-label">
+  <p-dropdown
+    inputId="categorySelector"
+    [options]="categories"
+    [(ngModel)]="valueSelected"
+    optionLabel="name"
+    optionValue="id"
+    (onChange)="onSelect(valueSelected)"
+  ></p-dropdown>
+  <label for="categorySelector">Tipo de transacción</label>
+</span>
