--- a/PMApp/src/app/shared/currency-field/currency-field.component.html
+++ b/PMApp/src/app/shared/currency-field/currency-field.component.html
@@ -1,23 +1,31 @@
-<mat-form-field id="currency-selector" appearance="fill">
-  <mat-label>Moneda</mat-label>
-  <mat-select [formControl]="currency" (ngModelChange)="setHint()">
-    <mat-option *ngFor="let item of currencies | keyvalue" [value]="item.key"
-      >{{ item.key }} - {{ item.value }}
-    </mat-option>
-  </mat-select>
-  <mat-hint>{{ exchangeHint }}</mat-hint>
-</mat-form-field>
-
-<mat-form-field appearance="fill" floatLabel="always">
-  <mat-label>Total</mat-label>
-  <input
-    [formControl]="amount"
-    matInput
-    type="number"
-    class="example-right-align"
-    placeholder="0"
-    (change)="setHint()"
-  />
-  <span matPrefix>$&nbsp;</span>
-  <mat-hint>{{ amountHint }}</mat-hint>
-</mat-form-field>
+<div class="grid">
+  <div class="col-6">
+    <span class="p-float-label">
+      <p-dropdown
+        inputId="currencySelector"
+        [options]="currencies"
+        [(ngModel)]="currencySelected"
+        optionLabel="value"
+        optionValue="key"
+        (onChange)="setHint()"
+        [formControl]="currency"
+      ></p-dropdown>
+      <label for="currencySelector">Moneda</label>
+      <small class="block">{{ exchangeHint }}</small>
+    </span>
+  </div>
+  <div class="col-6">
+    <span class="p-float-label">
+      <p-inputNumber
+        [formControl]="amount"
+        [(ngModel)]="amountInput"
+        mode="currency"
+        [currency]="currencySelected"
+        inputId="amountInput"
+        (ngModelChange)="setHint()"
+      ></p-inputNumber>
+      <label for="amountInput">Total</label>
+      <small class="block">{{ amountHint }}</small>
+    </span>
+  </div>
+</div>
