--- a/PMApp/src/app/features/home/components/summary/summary.component.html
+++ b/PMApp/src/app/features/home/components/summary/summary.component.html
@@ -18,7 +18,7 @@
 
     <div class="col-6 flex align-items-center justify-content-center">
       <p-button
-        styleClass="p-button-raised p-button-text p-button-success"
+        styleClass="p-button-raised p-button-text p-button-success px-2 "
         (click)="onGoToListTransaction('income')"
       >
         <i class="pi pi-angle-up"></i>
@@ -30,7 +30,7 @@
     </div>
     <div class="col-6 flex align-items-center justify-content-center">
       <p-button
-        styleClass="p-button-raised p-button-text p-button-danger"
+        styleClass="p-button-raised p-button-text p-button-danger px-2"
         (click)="onGoToListTransaction('expense')"
       >
         <i class="pi pi-angle-down"></i>
