--- a/PMApp/src/app/shared/category-picker/category-picker.component.html
+++ b/PMApp/src/app/shared/category-picker/category-picker.component.html
@@ -7,5 +7,5 @@
     optionValue="id"
     (onChange)="onSelect(valueSelected)"
   ></p-dropdown>
-  <label for="categorySelector">Tipo de transacción</label>
+  <label for="categorySelector">Categoría</label>
 </span>
