monthpicker add/substract month

--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -108,19 +108,18 @@
       <button
         pButton
         pRipple
-        label="Save"
+        label="Guardar"
         icon="pi pi-check"
         (click)="onSubmitForm()"
       ></button>
+      <button pButton pRipple label="Eliminar" icon="pi pi-trash"></button>
       <button
         pButton
         pRipple
-        label="Delete"
-        icon="pi pi-trash"
+        label="Limpiar"
+        icon="pi pi-times"
         (click)="onClearForm()"
-        disabled
       ></button>
-      <button pButton pRipple label="Cancel" icon="pi pi-times"></button>
     </span>
   </ng-template>
 </p-card>
