--- a/PMApp/src/app/features/home/components/list-transaction/list-transaction.component.html
+++ b/PMApp/src/app/features/home/components/list-transaction/list-transaction.component.html
@@ -1,15 +1,17 @@
 <p-card header="{{ title }}">
   <div class="grid">
-    <div class="col-12 flex mt-4 mb-4">
-      <div class="col-4 col-offset-1">
-        <app-month-picker [dateValue]="selectedDate"></app-month-picker>
-      </div>
-      <div class="col-4 col-offset-2">
-        <app-transaction-type-picker
-          [valueSelected]="selectedType"
-          (selection)="setTransactionType($event)"
-        ></app-transaction-type-picker>
-      </div>
+    <div
+      class="col-5 col-offset-1 flex flex-row justify-content-between align-items-center"
+    >
+      <app-month-picker [dateValue]="selectedDate"></app-month-picker>
+    </div>
+    <div
+      class="col-5 col-offset-1 flex flex-row justify-content-between align-items-center"
+    >
+      <app-transaction-type-picker
+        [valueSelected]="selectedType"
+        (selection)="setTransactionType($event)"
+      ></app-transaction-type-picker>
     </div>
     <div class="col-12">
       <div class="list-item" *ngFor="let transaction of transactions">
