--- a/PMApp/src/app/shared/month-picker/month-picker.component.html
+++ b/PMApp/src/app/shared/month-picker/month-picker.component.html
@@ -1,10 +1,30 @@
-<span class="p-float-label">
-  <p-calendar
-    [(ngModel)]="dateValue"
-    view="month"
-    dateFormat="mm/yy"
-    (onSelect)="onValueChange()"
-    inputId="monthpicker"
-  ></p-calendar>
-  <label for="monthpicker">Seleccionar mes</label>
-</span>
+<div class="grid">
+  <div class="flex flex-row justify-content-between align-items-center gap-3">
+    <button
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-angle-left"
+      class="p-button-rounded p-button-text"
+      (click)="setMonth('substract')"
+    ></button>
+    <span class="p-float-label">
+      <p-calendar
+        [(ngModel)]="dateValue"
+        view="month"
+        dateFormat="mm/yy"
+        (onSelect)="onValueChange()"
+        inputId="monthpicker"
+      ></p-calendar>
+      <label for="monthpicker">Seleccionar mes</label>
+    </span>
+    <button
+      pButton
+      pRipple
+      type="button"
+      icon="pi pi-angle-right"
+      class="p-button-rounded p-button-text"
+      (click)="setMonth('add')"
+    ></button>
+  </div>
+</div>
