--- a/PMApp/src/app/shared/month-picker/month-picker.component.html
+++ b/PMApp/src/app/shared/month-picker/month-picker.component.html
@@ -10,7 +10,7 @@
     ></button>
     <span class="p-float-label">
       <p-calendar
-        [(ngModel)]="dateValue"
+        [(ngModel)]="in_selection"
         view="month"
         dateFormat="mm/yy"
         (onSelect)="onValueChange()"
