--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -1,105 +1,97 @@
 <p-card header="Nuevo {{ action }}">
   <div
-    class="border-round-lg px-1 py-5 lg:p-6"
+    class="border-round-lg px-1 py-5 gap-0 lg:p-6"
     [ngClass]="actionType == 'income' ? 'bg-green-50' : 'bg-red-50'"
   >
     <form class="m-3" [formGroup]="form" id="ngForm">
-      <app-currency-field
-        (currencyValueSelector)="onSelectCurrency($event)"
-        [amountInput]="form.controls['amount']?.value"
-        [currencySelected]="form.controls['currency']?.value"
-      ></app-currency-field>
-      <p-divider></p-divider>
+      <div class="flex flex-column gap-1">
+        <app-currency-field
+          (out_selection)="onSelectCurrency($event)"
+          [in_amount]="form.controls['amount'].value"
+          [in_currency]="form.controls['currency'].value"
+        ></app-currency-field>
+        <p-divider></p-divider>
 
-      <span>
-        <h5>Realizado</h5>
-        <p-inputSwitch
-          inputId="completedSwitch"
-          formControlName="completed"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
-
-      <span class="p-float-label">
-        <p-calendar
-          formControlName="date_of_transaction"
-          [showIcon]="true"
-          inputId="calendar"
-          [(ngModel)]="dateSelected"
-        ></p-calendar>
-        <label for="calendar">Fecha de transacción</label>
-      </span>
-      <p-divider></p-divider>
-
-      <span class="p-float-label">
-        <input
-          id="description-input"
-          formControlName="description"
-          type="text"
-          pInputText
-        />
-        <label for="description-input">Descripción</label>
-      </span>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>{{ action }} Fijo</h5>
-        <p-inputSwitch
-          inputId="recurrentSwitch"
-          formControlName="recurrent"
-          (click)="onRecurrentToggle()"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>Repetir</h5>
-        <p-inputSwitch
-          inputId="repeatsSwitch"
-          formControlName="repeats"
-          (click)="onRepeatsToggle()"
-        ></p-inputSwitch>
-      </span>
-      <div
-        class="col-12 flex flex-wrap flex-row justify-content-around"
-        *ngIf="showRepetitions.value"
-      >
-        <span class="p-float-label">
-          <p-inputNumber formControlName="repetitions"></p-inputNumber>
-          <label for="calendar">Repeticiones</label>
+        <span>
+          <h5>Realizado</h5>
+          <p-inputSwitch
+            inputId="completedSwitch"
+            formControlName="completed"
+          ></p-inputSwitch>
         </span>
+        <p-divider></p-divider>
 
-        <app-frequency-picker
-          (selection)="onFrequencyChange($event)"
-        ></app-frequency-picker>
+        <span class="mt-3">
+          <span class="p-float-label">
+            <p-calendar
+              formControlName="date_of_transaction"
+              [showIcon]="true"
+              inputId="calendar"
+              [(ngModel)]="form_date"
+            ></p-calendar>
+            <label for="calendar">Fecha de transacción</label>
+          </span>
+        </span>
+        <p-divider></p-divider>
+
+        <span class="mt-2">
+          <span class="p-float-label">
+            <input
+              id="description-input"
+              formControlName="description"
+              type="text"
+              pInputText
+            />
+            <label for="description-input">Descripción</label>
+          </span>
+        </span>
+        <p-divider></p-divider>
+
+        <span>
+          <h5>{{ action }} Fijo</h5>
+          <p-inputSwitch
+            inputId="recurrentSwitch"
+            formControlName="recurrent"
+            (click)="onRecurrentToggle()"
+          ></p-inputSwitch>
+        </span>
+        <p-divider></p-divider>
+
+        <app-repetition-field
+          (out_selection)="onRepetitionSelect($event)"
+        ></app-repetition-field>
+        <p-divider></p-divider>
+
+        <span class="mt-2">
+          <span class="p-float-label">
+            <input
+              id="notes-input"
+              formControlName="notes"
+              type="text"
+              pInputText
+            />
+            <label for="notes-input">Notas</label>
+          </span>
+        </span>
+        <p-divider></p-divider>
+
+        <span class="mt-2">
+          <app-category-picker
+            [transactionType]="actionType"
+            (selection)="onCategorySelection($event)"
+          ></app-category-picker>
+        </span>
+        <p-divider></p-divider>
+
+        <span>
+          <h5>Ignorar</h5>
+          <p-inputSwitch
+            inputId="ignoreSwitch"
+            formControlName="ignore"
+          ></p-inputSwitch>
+        </span>
+        <p-divider></p-divider>
       </div>
-      <p-divider></p-divider>
-
-      <span class="p-float-label">
-        <input
-          id="notes-input"
-          formControlName="notes"
-          type="text"
-          pInputText
-        />
-        <label for="notes-input">Notas</label>
-      </span>
-      <p-divider></p-divider>
-
-      <app-category-picker
-        [transactionType]="actionType"
-        (selection)="onCategorySelection($event)"
-      ></app-category-picker>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>Ignorar</h5>
-        <p-inputSwitch
-          inputId="ignoreSwitch"
-          formControlName="ignore"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
     </form>
   </div>
 
