add form refactor

--- a/PMApp/src/app/shared/category-picker/category-picker.component.html
+++ b/PMApp/src/app/shared/category-picker/category-picker.component.html
@@ -5,7 +5,7 @@
     [(ngModel)]="valueSelected"
     optionLabel="name"
     optionValue="id"
-    (onChange)="onSelect(valueSelected)"
+    (onChange)="onSelect()"
   ></p-dropdown>
   <label for="categorySelector">Categoría</label>
 </span>
