--- a/PMApp/src/app/shared/repetition-field/repetition-field.component.html
+++ b/PMApp/src/app/shared/repetition-field/repetition-field.component.html
@@ -1,32 +1,27 @@
-<div class="grid">
-  <div class="col-12 mb-3">
-    <span>
-      <h5>Repetir</h5>
-      <p-inputSwitch
-        inputId="repeatsSwitch"
-        [(ngModel)]="in_repetitionOn"
-        (click)="onRepetitionToggle()"
-      ></p-inputSwitch>
-    </span>
-  </div>
-  <div
-    class="flex flex-wrap flex-row justify-content-between"
-    *ngIf="showRepetitionDetails"
-  >
-    <app-frequency-picker
-      [(selection)]="in_frequency"
-      (selectionChange)="onChange()"
-    ></app-frequency-picker>
-    <span class="p-float-label">
-      <p-inputNumber
-        [showButtons]="true"
-        inputId="repetitions"
-        [min]="0"
-        [max]="100"
-        [(ngModel)]="in_repetitions"
-        (ngModelChange)="onChange()"
-      ></p-inputNumber>
-      <label for="repetitions">Repeticiones</label>
-    </span>
-  </div>
+<div class="col-12">
+  <span>
+    <h5>Repetir</h5>
+    <p-inputSwitch
+      inputId="repeatsSwitch"
+      [(ngModel)]="in_repetitionOn"
+      (click)="onRepetitionToggle()"
+    ></p-inputSwitch>
+  </span>
+</div>
+<div class="flex flex-wrap gap-4 mt-5" *ngIf="in_repetitionOn">
+  <app-frequency-picker
+    [(selection)]="in_frequency"
+    (selectionChange)="onChange()"
+  ></app-frequency-picker>
+  <span class="p-float-label">
+    <p-inputNumber
+      [showButtons]="true"
+      inputId="repetitions"
+      [min]="1"
+      [max]="100"
+      [(ngModel)]="in_repetitions"
+      (ngModelChange)="onChange()"
+    ></p-inputNumber>
+    <label for="repetitions">Repeticiones</label>
+  </span>
 </div>
