--- a/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
+++ b/PMApp/src/app/features/home/components/edit-transaction/edit-transaction.component.html
@@ -1,121 +1,139 @@
-<p-card header="Editar {{ action }}">
+<p-card header="Editar {{ transactionTypeLabel }}">
   <div
-    class="border-round-lg px-1 py-5 lg:p-6"
-    [ngClass]="actionType == 'income' ? 'bg-green-50' : 'bg-red-50'"
+    class="border-round-lg px-1 pt-6 pb-0 gap-0 lg:px-6"
+    [ngClass]="transactionType == 'income' ? 'bg-green-50' : 'bg-red-50'"
   >
-    <form class="m-3" [formGroup]="form" id="ngForm">
-      <app-currency-field
-        (out_selection)="onSelectCurrency($event)"
-        [in_amount]="form.controls['amount'].value"
-        [in_currency]="form.controls['currency'].value"
-      ></app-currency-field>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>Realizado</h5>
-        <p-inputSwitch
-          inputId="completedSwitch"
-          formControlName="completed"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
-
-      <span class="p-float-label">
-        <p-calendar
-          formControlName="date_of_transaction"
-          [showIcon]="true"
-          inputId="calendar"
-          [(ngModel)]="form_date"
-        ></p-calendar>
-        <label for="calendar">Fecha de transacción</label>
-      </span>
-      <p-divider></p-divider>
-
-      <span class="p-float-label">
-        <input
-          id="description-input"
-          formControlName="description"
-          type="text"
-          pInputText
-        />
-        <label for="description-input">Descripción</label>
-      </span>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>{{ action }} Fijo</h5>
-        <p-inputSwitch
-          inputId="recurrentSwitch"
-          formControlName="recurrent"
-          (click)="onRecurrentToggle()"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
-
-      <span>
-        <h5>Repetir</h5>
-        <p-inputSwitch
-          inputId="repeatsSwitch"
-          formControlName="repeats"
-          (click)="onRepeatsToggle()"
-        ></p-inputSwitch>
-      </span>
-      <div
-        class="col-12 flex flex-wrap flex-row justify-content-around"
-        *ngIf="showRepetitions.value"
-      >
-        <span class="p-float-label">
-          <p-inputNumber formControlName="repetitions"></p-inputNumber>
-          <label for="calendar">Repeticiones</label>
-        </span>
-
-        <app-frequency-picker
-          (selection)="onFrequencyChange($event)"
-        ></app-frequency-picker>
+    <form [formGroup]="form" id="ngForm">
+      <div class="col-12 pb-0">
+        <app-currency-field
+          [in_currency]="form.controls['currency'].value"
+          [in_amount]="form.controls['amount'].value"
+          (out_selection)="onCurrencyFieldChange($event)"
+        ></app-currency-field>
+        <p-divider></p-divider>
       </div>
-      <p-divider></p-divider>
 
-      <span class="p-float-label">
-        <input
-          id="notes-input"
-          formControlName="notes"
-          type="text"
-          pInputText
-        />
-        <label for="notes-input">Notas</label>
-      </span>
-      <p-divider></p-divider>
+      <div class="col-12 my-0 py-0">
+        <span>
+          <h5>Realizado</h5>
+          <p-inputSwitch
+            inputId="completedSwitch"
+            formControlName="completed"
+          ></p-inputSwitch>
+        </span>
+        <p-divider></p-divider>
+      </div>
 
-      <p-divider></p-divider>
+      <div class="col-12">
+        <span class="p-float-label">
+          <p-calendar
+            formControlName="date_of_transaction"
+            [showIcon]="true"
+            inputId="calendar"
+            [(ngModel)]="dateOfTransaction"
+          ></p-calendar>
+          <label for="calendar">Fecha de transacción</label>
+        </span>
+        <p-divider></p-divider>
+      </div>
 
-      <span>
-        <h5>Ignorar</h5>
-        <p-inputSwitch
-          inputId="ignoreSwitch"
-          formControlName="ignore"
-        ></p-inputSwitch>
-      </span>
-      <p-divider></p-divider>
+      <div class="col-12 my-0 py-0">
+        <span class="p-float-label">
+          <input
+            id="description-input"
+            formControlName="description"
+            type="text"
+            pInputText
+            ariaRequired="true"
+            allowEmpty="false"
+          />
+          <label for="description-input">Descripción</label>
+        </span>
+        <p-divider></p-divider>
+      </div>
+
+      <div class="col-12 my-0 py-0">
+        <span>
+          <h5>{{ transactionTypeLabel }} Fijo</h5>
+          <p-inputSwitch
+            inputId="recurrentSwitch"
+            formControlName="recurrent"
+            (click)="onRecurrentChange()"
+          ></p-inputSwitch>
+        </span>
+        <p-divider></p-divider>
+      </div>
+
+      <div class="col-12 my-0 py-0">
+        <app-repetition-field
+          [in_repetitionOn]="repetitionOn"
+          [in_repetitions]="form.controls['repetitions'].value"
+          [in_frequency]="form.controls['frequency'].value"
+          (out_selection)="onRepetitionChange($event)"
+        ></app-repetition-field>
+        <p-divider></p-divider>
+      </div>
+
+      <div class="col-12 pt-2 mb-0 pb-2">
+        <app-category-picker
+          [in_transactionType]="transactionType"
+          (out_selection)="onCategorySelection($event)"
+        ></app-category-picker>
+        <p-divider></p-divider>
+      </div>
+
+      <div class="col-12 my-0 py-0">
+        <span class="p-float-label">
+          <input
+            id="notes-input"
+            formControlName="notes"
+            type="text"
+            pInputText
+          />
+          <label for="notes-input">Notas</label>
+        </span>
+        <p-divider></p-divider>
+      </div>
+
+      <div class="col-12 my-0 py-0">
+        <span>
+          <h5>Ignorar</h5>
+          <p-inputSwitch
+            inputId="ignoreSwitch"
+            formControlName="ignore"
+          ></p-inputSwitch>
+        </span>
+        <p-divider></p-divider>
+      </div>
     </form>
   </div>
-
   <ng-template pTemplate="footer">
-    <span class="p-buttonset">
+    <div
+      class="flex flex-wrap justify-content-around px-1 pt-0 mt-0 gap-0 lg:px-6"
+    >
+      <button
+        pButton
+        pRipple
+        label="Eliminar"
+        class="p-button-outlined p-button-danger"
+        icon="pi pi-trash"
+        (click)="onDelete()"
+      ></button>
+      <button
+        pButton
+        pRipple
+        label="Limpiar"
+        class="p-button-outlined"
+        icon="pi pi-times"
+      ></button>
       <button
         pButton
         pRipple
         label="Guardar"
         icon="pi pi-check"
+        type="submit"
         (click)="onSubmitForm()"
       ></button>
-      <button pButton pRipple label="Eliminar" icon="pi pi-trash"></button>
-      <button
-        pButton
-        pRipple
-        label="Limpiar"
-        icon="pi pi-times"
-        (click)="onClearForm()"
-      ></button>
-    </span>
+    </div>
   </ng-template>
 </p-card>
