--- a/PMApp/src/app/shared/currency-field/currency-field.component.html
+++ b/PMApp/src/app/shared/currency-field/currency-field.component.html
@@ -1,7 +1,7 @@
 <div class="grid">
   <div class="flex flex-wrap flex-row gap-4">
     <div class="block">
-      <span class="p-float-label">
+      <span class="p-float-label pl-2">
         <p-dropdown
           inputId="currencySelector"
           [options]="currencies"
@@ -15,7 +15,7 @@
       <small class="block">{{ exchangeHint }}</small>
     </div>
     <div class="block">
-      <span class="p-float-label">
+      <span class="p-float-label pl-2">
         <p-inputNumber
           [(ngModel)]="in_amount"
           mode="currency"
