--- a/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
+++ b/PMApp/src/app/features/home/components/add-transaction/add-transaction.component.html
@@ -15,7 +15,7 @@
 
       <div class="col-12 my-0 py-0">
         <span>
-          <h5>Realizado</h5>
+          <h5>Transacción completada</h5>
           <p-inputSwitch
             inputId="completedSwitch"
             formControlName="completed"
