--- a/PMApp/src/app/shared/frequency-picker/frequency-picker.component.html
+++ b/PMApp/src/app/shared/frequency-picker/frequency-picker.component.html
@@ -6,6 +6,7 @@
     (ngModelChange)="onChange()"
     optionLabel="viewValue"
     optionValue="value"
+    [disabled]="in_disabled"
   ></p-dropdown>
   <label for="frequencySelector">Frecuencia</label>
 </span>
